# bevy_rapier

bevy_rapier2d/: Cargo.toml
bevy_rapier2d/examples/: boxes2.rs  contact_filter2.rs  custom_system_setup2.rs  debug_despawn2.rs  despawn2.rs  joints2.rs  joints_despawn2.rs  locked_rotations2.rs  multiple_colliders2.rs  player_movement2.rs
bevy_rapier3d/: Cargo.toml
bevy_rapier3d/examples/: boxes3.rs  contact_filter3.rs  custom_system_setup3.rs  despawn3.rs  events3.rs  joints3.rs  joints_despawn3.rs  locked_rotations3.rs  multiple_colliders3.rs  ray_casting3.rs  static_trimesh3.rs
src/: lib.rs
src/dynamics/: rigid_body.rs
src/geometry/: collider.rs  collider_impl.rs
src/geometry/shape_views/: round_shape.rs
src/plugin/: configuration.rs  context.rs  plugin.rs  systems.rs
src/render/: mod.rs
src/render/lines/: render_dim.rs
src/utils/: mod.rs
