[package]
name = "bevy_rapier2d"
version = "0.19.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim2" ]

[features]
default = [ "dim2", "debug-render" ]
dim2 = ["bevy/bevy_render"]
debug-render = [ "bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/bevy_sprite", "rapier2d-f64/debug-render" ]
parallel = [ "rapier2d-f64/parallel" ]
simd-stable = [ "rapier2d-f64/simd-stable" ]
simd-nightly = [ "rapier2d-f64/simd-nightly" ]
wasm-bindgen = [ "rapier2d-f64/wasm-bindgen" ]
serde-serialize = [ "rapier2d-f64/serde-serialize", "serde" ]
enhanced-determinism = [ "rapier2d-f64/enhanced-determinism" ]

[dependencies]
bevy = { git = "https://github.com/taiyoungjang/bevy",  default-features = false, features = ["bevy_asset", "bevy_scene"] }
bevy_reflect = { git = "https://github.com/taiyoungjang/bevy" }
bevy_ecs_macros = { git = "https://github.com/taiyoungjang/bevy" }
bevy_ecs = { git = "https://github.com/taiyoungjang/bevy" }
bevy_transform = { git = "https://github.com/taiyoungjang/bevy" }
nalgebra = { version = "^0.31.4", features = [ "convert-glam022" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier2d-f64 = "0.16.1"
bitflags = "1"
#bevy_prototype_debug_lines = { version = "0.6", optional = true }
log = "0.4"
serde = { version = "1", features = [ "derive" ], optional = true}

[dev-dependencies]
bevy = { git = "https://github.com/taiyoungjang/bevy", default-features = false, features = ["x11"]}
bevy_reflect = { git = "https://github.com/taiyoungjang/bevy" }
bevy_ecs_macros = { git = "https://github.com/taiyoungjang/bevy" }
bevy_ecs = { git = "https://github.com/taiyoungjang/bevy" }
bevy_transform = { git = "https://github.com/taiyoungjang/bevy" }

oorandom = "11"
approx = "0.5.1"
glam = { version = "0.22", features = [ "approx" ] }

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
features = [ "debug-render", "serde-serialize" ]
